--- a/nginx.conf
+++ b/nginx.conf
@@ -1,40 +1,30 @@
 server{
-    host 192.168.3.31;
-    port 8080;
+    host 127.0.0.1;
     port 8081;
+    port 8083;
     port 8082;
     server_name example.com;
     error_page 400 www/error_pages/400.html;
     error_page 401 www/error_pages/401.html;
     client_max_body_size 100;
     default_root www;
-    default_index 400.html;
+    default_index default.html;
     location /{
         root www;
-        autoindex on;
         allow_methods GET POST DELETE;
-        return 300 http://google.com;
-        upload_dir www/uploads;
         index index.html;
-        cgi .cgi www/hello.py;
-    }
-    # location uploads/{
-    #     root www;
-    #     autoindex on;
-    #     allow_methods GET POST DELETE;
-    #     return 300 http://google.com;
-    #     upload_dir www;
-    #     index www/index.html;
-    #     cgi .cgi www/hello.py;
-    # }
-    location error_pages/{
-        root www;
-        autoindex on;
-        allow_methods GET POST DELETE;
-        return 300 http://google.com;
         upload_dir www/uploads;
-        # index 400.html;
-        cgi .cgi www/hello.py;
+        cgi .py /usr/bin/python3;
+        cgi .pl /usr/bin/perl;
+        cgi .php /usr/bin/php;
+        autoindex on;
+        # return 301 http://google.com;
+    }
+    location /error_pages/{
+        root www;
+        allow_methods GET POST;
+        # return 350 http://youtube.com;
+        upload_dir www;
     }
 }
 
